# simpcl

./: .gitignore  .travis.yml  LICENSE  README.md  index.md  main.yml
devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
devel/.private/filters/: .rosinstall  setup.sh
devel/.private/filters/lib/filters/: passthrough_filter  statistical_removal  voxel_filter
devel/.private/filters/lib/pkgconfig/: filters.pc
devel/.private/filters/share/filters/cmake/: filtersConfig.cmake
devel/lib/filters/: passthrough_filter  statistical_removal  voxel_filter
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  filters.pc
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/filters/cmake/: filtersConfig-version.cmake  filtersConfig.cmake
docs/: README.md
logs/filters/: build.make.001.log.stderr
src/filters/: CMakeLists.txt  package.xml
src/filters/calibrate/: README.md  calibrate_statistical_removal.cpp
src/filters/include/filters/: mapping_settings.rviz
src/filters/launch/: README.md  altitude_listener.launch  everything.launch  filter.launch  icp.launch  mapping.launch  model_projection.launch  morphological_segmentation.launch  multi_filter.launch  passthrough_filter.launch  planar_segmentation.launch  radius_removal.launch  statistical_removal.launch  tf_broadcaster.launch  voxel_filter.launch
src/filters/src/: README.md  altitude_listener.cpp  altitude_listener.py  don_segmentation.cpp  everything.cpp  filter.cpp  handmade.cpp  icp.cpp  model_projection.cpp  morphological_segmentation.cpp  multi_filter.cpp  passthrough_filter.cpp  planar_segmentation.cpp  pointmatcher.cpp  radius_removal.cpp  region_growing_segmentation.cpp  statistical_removal.cpp  tf_broadcaster.cpp  volex_filter.cpp  voxel_filter.cpp
src/simpcl/: CMakeLists.txt  package.xml
src/simpcl/launch/: all_in_one.launch  mapping.launch  tf_broadcaster.launch
src/simpcl/launch/filters/: color.launch  cropbox.launch  icp.launch  passthrough.launch  radius_removal.launch  statistical_removal.launch  voxel_filter.launch  voxel_pass_removal.launch
src/simpcl/src/: all_in_one.cpp  tf_broadcaster.cpp
src/simpcl/src/filters/: color_filter.cpp  cropbox_filter.cpp  icp.cpp  model_projection.cpp  passthrough_filter.cpp  planar_segmentation.cpp  radius_removal.cpp  statistical_removal.cpp  voxel_filter.cpp  voxel_pass_removal.cpp
src/simpcl/src/filters/unstable/: don_segmentation.cpp  handmade_icp.cpp  morphological_segmentation.cpp  pointmatcher.cpp  region_growing_segmentation.cpp  resampling.cpp
src/stereo_filters/: CMakeLists.txt  package.xml
src/stereo_filters/launch/: all_in_one.launch  icp.launch  mapping.launch  passthrough.launch  radius_removal.launch  statistical_removal.launch  tf_broadcaster.launch  voxel_filter.launch  voxel_pass_removal.launch
src/stereo_filters/src/: all_in_one.cpp  tf_broadcaster.cpp
src/stereo_filters/src/filters/: icp.cpp  model_projection.cpp  passthrough_filter.cpp  statistical_removal.cpp  voxel_filter.cpp  voxel_pass_removal.cpp
src/stereo_filters/src/filters/unstable/: don_segmentation.cpp  handmade.cpp  pointmatcher.cpp  resampling.cpp
